--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -13,6 +13,7 @@
     />
   </head>
   <body>
+    <!--Navigation-->
     <header>
       <nav id="header-nav" class="navbar navbar-default">
         <div class="container-fluid">
@@ -20,7 +21,6 @@
             <div class="navbar-brand text-left">
               <a href="index.html"><h1>Food, LLC</h1></a>
             </div>
-
             <button
               type="button"
               class="navbar-toggle collapsed visible-xs"
@@ -53,6 +53,8 @@
         </div>
       </nav>
     </header>
+
+    <!--Main Area-->
     <main>
       <h1 id="menu" class="text-center">Our Menu</h1>
       <div class="container-fluid">
